--- a/PROYECTO_Servidor-main/package.json
+++ b/PROYECTO_Servidor-main/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
     "nodemon": "^3.1.7",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "proyecto_servidor": "file:"
   }
 }
