--- a/proyectoMVC/package.json
+++ b/proyectoMVC/package.json
@@ -9,13 +9,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "dotenv": "^16.4.7",
-    "express": "^4.21.1",
-    "mongoose": "^8.8.3",
+    "express": "^4.21.2",
+    "mongoose": "^8.8.4",
     "nodemon": "^3.1.7",
     "path": "^0.12.7",
     "proyectomvc": "file:"
-  }
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.16"
+  },
+  "description": ""
 }
