--- a/ProyectoPFS/package.json
+++ b/ProyectoPFS/package.json
@@ -14,5 +14,8 @@
     "express": "^4.21.2",
     "mongoose": "^8.9.5",
     "nodemon": "^3.1.9"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17"
   }
 }
