--- a/ProyectoPFS/package.json
+++ b/ProyectoPFS/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.9.5",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "proyectopfs": "file:"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.17"
