--- a/ProyectoPFS/package.json
+++ b/ProyectoPFS/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
+    "path": "^0.12.7",
     "proyectopfs": "file:"
   },
   "devDependencies": {
